<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="stats_launcher_name">Habit Stats</string>
    <string name="default_habit_name">Habit</string>
    <string name="logged_label">✓  %1$s</string>
    <string name="hint_long_press">Long-press the icon for statistics</string>
    <string name="hint_stats_icon">Open “Habit stats” for statistics</string>
    <plurals name="count_today">
        <item quantity="one">%d today</item>
        <item quantity="other">%d today</item>
    </plurals>
    <plurals name="count_this_week">
        <item quantity="one">%d this week</item>
        <item quantity="other">%d this week</item>
    </plurals>
    <plurals name="count_this_month">
        <item quantity="one">%d this month</item>
        <item quantity="other">%d this month</item>
    </plurals>
    <plurals name="count_this_year">
        <item quantity="one">%d this year</item>
        <item quantity="other">%d this year</item>
    </plurals>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="last_week">Last week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="shortcut_statistics">Statistics</string>
    <string name="shortcut_statistics_of">%1$s Statistics</string>
    <string name="shortcut_habits">Habits</string>
    <string name="shortcut_habits_long">All Habits</string>
    <string name="shortcut_deleted">This habit was deleted</string>
    <string name="widget_description">Log a habit with one tap, right on your home screen</string>
    <string name="widget_log_description">Log %1$s</string>
    <string name="widget_pick_title">Choose a Habit for This Widget</string>
    <string name="period_day">Day</string>
    <string name="period_week">Week</string>
    <string name="period_month">Month</string>
    <string name="period_year">Year</string>
    <string name="stats_title_day">Daily Statistics</string>
    <string name="stats_title_week">Weekly Statistics</string>
    <string name="stats_title_month">Monthly Statistics</string>
    <string name="stats_title_year">Yearly Statistics</string>
    <string name="stat_average">Average</string>
    <string name="stat_min">Min</string>
    <string name="stat_max">Max</string>
    <string name="stat_std_dev">Std. dev.</string>
    <string name="stat_variance">Variance</string>
    <string name="stat_total">Total</string>
    <string name="stat_empty">–</string>
    <plurals name="based_on_days">
        <item quantity="one">Based on %d day</item>
        <item quantity="other">Based on %d days</item>
    </plurals>
    <plurals name="based_on_weeks">
        <item quantity="one">Based on %d week</item>
        <item quantity="other">Based on %d weeks</item>
    </plurals>
    <plurals name="based_on_months">
        <item quantity="one">Based on %d month</item>
        <item quantity="other">Based on %d months</item>
    </plurals>
    <plurals name="based_on_years">
        <item quantity="one">Based on %d year</item>
        <item quantity="other">Based on %d years</item>
    </plurals>
    <string name="excludes_day">today is still running and not included</string>
    <string name="excludes_week">this week is still running and not included</string>
    <string name="excludes_month">this month is still running and not included</string>
    <string name="excludes_year">this year is still running and not included</string>
    <string name="caption_join">%1$s · %2$s</string>
    <plurals name="count_entries">
        <item quantity="one">entry</item>
        <item quantity="other">entries</item>
    </plurals>
    <string name="history">History</string>
    <string name="range_start">Start</string>
    <string name="range_today">Today</string>
    <string name="range_all">All</string>
    <string name="range_separator">–</string>
    <string name="range_from_description">Chart start date: %1$s</string>
    <string name="range_to_description">Chart end date: %1$s</string>
    <string name="chart_description">Bar chart of %1$d periods, highest %2$d</string>
    <string name="chart_empty">Nothing logged yet</string>
    <string name="time_of_day">Time of Day</string>
    <string name="time_peak">Most likely around %1$s · %2$s of days</string>
    <string name="time_at">At %1$s · %2$s of days</string>
    <string name="time_explained">Share of days with an entry around each time, in the History window</string>
    <string name="time_chart_description">Time of day chart. Most likely around %1$s, on %2$s of days.</string>
    <string name="entries">Entries</string>
    <string name="entries_empty">Nothing logged</string>
    <plurals name="entries_more">
        <item quantity="one">and %d more</item>
        <item quantity="other">and %d more</item>
    </plurals>
    <string name="add_entry">Add entry</string>
    <string name="delete_entry_title">Delete Entry?</string>
    <string name="delete_entry_message">Logged %1$s</string>
    <string name="future_entry">Entries can\'t be in the future</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="pick_date">Pick a date</string>
    <string name="habits">Habits</string>
    <string name="new_habit">New Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="manage_habits">Manage Habits…</string>
    <string name="switch_habit">Switch habit</string>
    <string name="habits_tip">Tap a habit for its statistics, or + to log it.</string>
    <string name="app_icon_badge">app icon</string>
    <string name="habit_subtitle">%1$s · %2$s</string>
    <string name="log_habit">Log %1$s</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="not_now">Not now</string>
    <string name="name_hint">Name, e.g. Smoking</string>
    <string name="name_required">Enter a name</string>
    <string name="color">Color</string>
    <string name="color_description">Color %1$d</string>
    <string name="icon">Icon</string>
    <string name="upload_icon">Use your own image</string>
    <string name="image_failed">That image couldn\'t be used</string>
    <string name="home_screen">Home Screen</string>
    <string name="add_to_home">Add Icon to Home Screen</string>
    <string name="add_widget">Add One-Tap Widget</string>
    <string name="pin_unsupported">Your launcher doesn\'t support this</string>
    <string name="pin_legacy_done">Icon sent to your home screen</string>
    <string name="main_icon_habit">App Icon Logs This Habit</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="delete_habit_title">Delete “%1$s”?</string>
    <plurals name="delete_habit_message">
        <item quantity="one">Its %d entry will be deleted too. This can\'t be undone.</item>
        <item quantity="other">All %d entries will be deleted too. This can\'t be undone.</item>
    </plurals>
    <string name="add_to_home_title">Add to Home Screen?</string>
    <string name="add_to_home_message">Tapping the new icon logs “%1$s” without opening the app.</string>
    <string name="habits_empty">No habits yet.\nTap + to add one.</string>
    <string name="widget_choose">Choose Habit</string>
    <string name="widget_deleted">Habit Deleted</string>
    <string name="widget_exists">%1$s already has a widget on your home screen</string>
    <string name="icon_exists">%1$s already has an icon on your home screen</string>
    <string name="widget_size_title">Widget Size</string>
    <string name="widget_size_option">%1$d × %2$d</string>
    <string name="widget_size_description">%1$d by %2$d cells</string>
    <string name="widget_size_hint">You can resize it any time: touch &amp; hold the widget on your home screen.</string>
    <string name="widget_added">Widget added. Touch &amp; hold it to resize.</string>
    <string name="widget_none_free">Every Habit Already Has a Widget</string>
    <string name="clear">Clear</string>
    <string name="clear_entries">Clear All Entries</string>
    <string name="clear_entries_title">Clear All Entries of “%1$s”?</string>
    <plurals name="clear_entries_message">
        <item quantity="one">Its %d entry will be deleted. The habit itself stays. This can\'t be undone.</item>
        <item quantity="other">All %d entries will be deleted. The habit itself stays. This can\'t be undone.</item>
    </plurals>
    <string name="clear_entries_nothing">There are no entries to clear</string>
    <string name="clear_entries_done">All entries cleared</string>
    <string name="delete_habit_home_note">Android doesn\'t let apps remove home-screen items: its icon will be greyed out and its widget will show “Habit Deleted” until you long-press them and choose Remove.</string>
    <string name="icon_check">Check</string>
    <string name="icon_smoking">Smoking</string>
    <string name="icon_smoke_free">No smoking</string>
    <string name="icon_vaping">Vaping</string>
    <string name="icon_sweets">Sweets</string>
    <string name="icon_icecream">Ice cream</string>
    <string name="icon_cake">Cake</string>
    <string name="icon_pizza">Pizza</string>
    <string name="icon_food">Food</string>
    <string name="icon_burger">Fast food</string>
    <string name="icon_fruit">Fruit</string>
    <string name="icon_greens">Greens</string>
    <string name="icon_coffee">Coffee</string>
    <string name="icon_tea">Tea</string>
    <string name="icon_drinks">Drinks</string>
    <string name="icon_beer">Beer</string>
    <string name="icon_wine">Wine</string>
    <string name="icon_water">Water</string>
    <string name="icon_water_glass">Glass of water</string>
    <string name="icon_workout">Workout</string>
    <string name="icon_walk">Walk</string>
    <string name="icon_run">Run</string>
    <string name="icon_bike">Cycling</string>
    <string name="icon_swim">Swimming</string>
    <string name="icon_hike">Hiking</string>
    <string name="icon_football">Football</string>
    <string name="icon_basketball">Basketball</string>
    <string name="icon_meditation">Meditation</string>
    <string name="icon_selfcare">Self-care</string>
    <string name="icon_sleep">Sleep</string>
    <string name="icon_wake">Wake up</string>
    <string name="icon_alarm">Alarm</string>
    <string name="icon_read">Reading</string>
    <string name="icon_journal">Journal</string>
    <string name="icon_medication">Medication</string>
    <string name="icon_love">Love</string>
    <string name="icon_mood">Good mood</string>
    <string name="icon_bad_mood">Bad mood</string>
    <string name="icon_phone">Phone</string>
    <string name="icon_call">Call</string>
    <string name="icon_tv">TV</string>
    <string name="icon_gaming">Gaming</string>
    <string name="icon_music">Music</string>
    <string name="icon_piano">Instrument</string>
    <string name="icon_art">Art</string>
    <string name="icon_photo">Photo</string>
    <string name="icon_cleaning">Cleaning</string>
    <string name="icon_shower">Shower</string>
    <string name="icon_teeth">Teeth</string>
    <string name="icon_pets">Pets</string>
    <string name="icon_plants">Plants</string>
    <string name="icon_savings">Savings</string>
    <string name="icon_shopping">Shopping</string>
    <string name="icon_code">Coding</string>
    <string name="icon_study">Study</string>
    <string name="icon_language">Language</string>
    <string name="icon_work">Work</string>
    <string name="icon_weight">Weight</string>
    <string name="icon_timer">Timer</string>
    <string name="icon_star">Star</string>
    <string name="icon_energy">Energy</string>
    <string name="icon_mind">Mind</string>
    <string name="icon_toilet">Toilet</string>
    <string name="icon_kindness">Kindness</string>
</resources>